--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.18",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/styles": "^4.11.4",
+    "@material-ui/system": "^4.12.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^4.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
+    "video.js": "^7.15.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
